Ticket #28265: The option to maximize the PDF viewer has been added.
* The test page - PDF viewer - now displays the PDF viewer in the full
size of the component in which it is located.
* A new CSS class has been added that can be used for pages on which the
PDF viewer is to be displayed in full size.
* A DirectFormDisplay now renders the css class saved in a form member
too.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -306,6 +306,15 @@ span.can-edit {
 	margin: var(--spacing-02) var(--spacing-03) 0 var(--spacing-03);
 }
 
+.tl-fullscreen-pdf-container {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	box-sizing: border-box;
+	padding: var(--spacing-02) var(--spacing-03) 0 var(--spacing-03);
+    margin: 0;
+}
+
 div.frmBody > div.dropPane {
 	display: none;
 }
