--- a/com.top_logic.themes.core/src/main/webapp/style/tabbar.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tabbar.css
@@ -32,7 +32,6 @@
 .tlTabScrollContainer {
 	display: flex;
 	flex-wrap: nowrap;
-	height: var(--tabbar-height);
 	overflow-x: auto;
 	scrollbar-width: none;
 }
@@ -66,7 +65,6 @@
 	flex-shrink: 0;
 	gap: var(--spacing-02);
 	cursor: pointer;
-	height: var(--tabbar-height);
 	width: auto;
 	background: transparent;
 	padding: var(--spacing-01) var(--spacing-03);
@@ -131,6 +129,7 @@
 .tlTabBar .tab:focus {
 	box-shadow: inset 0px 0px 0px 2px var(--focus),inset 0px 0px 0px 3px var(--focus-inset);
 	border-bottom: 1px solid var(--focus);
+	outline: none;
 }
 
 .tlTabBar .activeTab:disabled,
