Ticket #28386: Fixed popup buttons for empty HTML fields in table.
Popup button had no padding to table cell.

--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -1033,6 +1033,10 @@ table td a.cDownload {
 	overflow: hidden;
 }
 
+.tl-table__cell :is(.lFlexible,.lFlexibleCustom) {
+	height: var(--table-row-height);
+}
+
 /* Use default width for select fields in title of
  frozen tables (e.g. needed for gallery edit dialog). */
 .tl-table__title span.lFlexible select {
