Ticket #28386: Fixed inconsistent top margin in two column forms.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -391,11 +391,15 @@ div.rf_buttons {
     margin-left: calc(-1*var(--RF_HORIZONTAL_GAP_COLUMNS));
 }
 
-.rf_inputCell:first-child {
+/* 
+	Remove spacing between cell label and multi-field cell content as e.g. in I18N fields. 
+	Inner cells never wrap to multiple columns, therefore the first and last entry can have different margins.
+*/
+.rf_cell .rf_inputCell:first-child {
     margin-top: 0;
 }
 
-.rf_inputCell:last-child {
+.rf_cell .rf_inputCell:last-child {
     margin-bottom: 0;
 }
 
