Ticket #28469: Active filter icon color is now red instead of blue.

--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -699,7 +699,7 @@ div.fltList {
 }
 
 .sidebarFilterEntry.collapsibleFilterEntry:hover {
-	background: var(--layer-hover);
+	background: var(--layer-accent-hover);
 }
 
 .checkboxMultiSelectEntry {
