Ticket #28469: Fixed hover view of filter icon and also filter header.
* The sidebar filter header has its text now cut if the text is longer
than the container.

--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -692,14 +692,14 @@ div.fltList {
     padding: 0 var(--spacing-03);
 }
 
-.sidebarFilterEntry.collapsibleFilterEntry {
-	background-color: var(--layer-accent);
-	color: var(--layer-accent-text);
-	--button-fg: var(--layer-accent-icon);
-}
-
 .sidebarFilterEntry.collapsibleFilterEntry:hover {
 	background: var(--layer-accent-hover);
+}
+
+.collapsibleFilterEntry span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .checkboxMultiSelectEntry {
