--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -682,7 +682,7 @@ div.fltList {
 	max-height: none;
 }
 
-.sidebarFilterEntry.collapsibleFilterEntry {
+.tl-sidebar-filter__entry.tl-sidebar-filter__entry--collapsible {
     display: flex;
     align-items: center;
     gap: var(--spacing-01);
@@ -692,11 +692,11 @@ div.fltList {
     padding: 0 var(--spacing-03);
 }
 
-.sidebarFilterEntry.collapsibleFilterEntry:hover {
+.tl-sidebar-filter__entry.tl-sidebar-filter__entry--collapsible:hover {
 	background: var(--layer-accent-hover);
 }
 
-.collapsibleFilterEntry span {
+.tl-sidebar-filter__entry--collapsible .tl-sidebar-filter__entry-text {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
