Ticket #28469: Trash icon received a white outline too.

--- a/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
@@ -659,15 +659,8 @@ a.fChoose:hover,
 	color: var(--highlight-fg, var(--button-fg, var(--icon-primary)));
 }
 
-.cButton.dfRemove {
-	color: var(--support-danger) !important;
-}
-
 .cButton.dfRemove a {
-	color: var(--support-danger) !important;
-}
-
-.cButton.dfRemove a:hover {
+	text-shadow: var(--icon-outline);
 	color: var(--support-danger) !important;
 }
 
