Ticket #28474: Changed the arrow color because the theme colors changed.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -2576,7 +2576,7 @@ span.disabled .ddwttDropBtn {
 }
 
 .ddwttDropBtn .ddwttChevron i {
-	color: var(--highlight-fg, var(--icon-on-color-disabled));
+	color: var(--highlight-fg, var(--icon-secondary));
 }
 
 .ddwttDropBtnActive .ddwttChevron i {
