Ticket #28474: Changed icon color and select text control's style.
* Icon color in flexible components did not have the right color. now
they do.
* The select component is now fixed. The icon was not centered which was
only the case in this component. A global fix might break the icon
position in other components which is why this local rule was chosen.

--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -632,7 +632,7 @@ div.fltList {
 }
 
 .defaultFilterContainer .cPopupSelect,
-.defaultFilterContainer .cTextSelect,
+.defaultFilterContainer .tl-text-select,
 .defaultFilterContainer .cExpandableTextInput,
 .defaultFilterContainer .cTextInput,
 .defaultFilterContainer .cDatetime,
