--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -921,7 +921,7 @@ table td .ddwttContainer {
 
 table td span.cDecoratedCell,
 table td span.cPopupSelect,
-table td span.cTextSelect,
+table td span.tl-text-select,
 table td span.cDropdownSelect,
 table td span.cDateInput,
 table td span.cIntegerInput,
