--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -1026,10 +1026,11 @@ table td a.cDownload {
 }
 
 :is(.tl-table__cell,.rf_cell) :is(.lFlexible,.lFlexibleCustom,.ddwttContainer),
-:is(.lFlexible,.lFlexibleCustom) :is(textarea,input:is(.is-input,.is-popup)) {
+:is(.lFlexible,.lFlexibleCustom) :is(input:is(.is-input,.is-popup)) {
 	box-sizing: border-box;
 	width: 100%;
 	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .tl-table__cell :is(.lFlexible,.lFlexibleCustom) {
@@ -1305,6 +1306,7 @@ table {
 .tl-table__cell-container {
 	overflow:hidden;
 	white-space:nowrap;
+	text-overflow: ellipsis;
 	padding: 0 var(--spacing-01) !important;
     box-sizing: border-box;
     height:var(--table-row-height);
