Ticket #28477: The textarea field fills the entire width.

--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -1033,6 +1033,12 @@ table td a.cDownload {
 	text-overflow: ellipsis;
 }
 
+:is(.lFlexible,.lFlexibleCustom) :is(textarea) {
+	box-sizing: border-box;
+	width: 100%;
+	text-overflow: ellipsis;
+}
+
 .tl-table__cell :is(.lFlexible,.lFlexibleCustom) {
 	height: var(--table-row-height);
 }
