Ticket #28474: Style changes.
* The integer input field does not fill the entire width.
* As an inline-flex the cTextPopup does not initially fill the entire
space up. With flex the button is stuck at the end of the container
leaving a huge empty space in the gui.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -1533,6 +1533,7 @@ div.cal_zoom_inAnimation {
 .cIntegerInput {
 	display: inline-flex;
 	align-items: stretch;
+	width: 100%;
 }
 
 .cIntegerInput input,
@@ -1767,7 +1768,7 @@ input.is-checkbox[disabled] {
 }
 
 .cTextPopup {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     flex-wrap: nowrap;
     gap: var(--spacing-02);
