Ticket #28498: Added margin-left do DropDowns inside Toolbars.

--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -2410,6 +2410,7 @@ div.treeNode.treeSelected.dndInsertInto {
 }
 
 .cCollapsibleToolbar .cButton,
+.cCollapsibleToolbar .ddwttContainer,
 .cToolbar .cButton,
 .tl-table__title-toolbar .cButton {
 	display: inline-flex;
