Ticket #28501: Initially collapse sidebar in condensed theme.

--- a/com.top_logic.themes.core/src/main/webapp/WEB-INF/layouts/themes/coreSidebar/templates/masterContent.xml
+++ b/com.top_logic.themes.core/src/main/webapp/WEB-INF/layouts/themes/coreSidebar/templates/masterContent.xml
@@ -20,6 +20,7 @@
 
 				<components>
 					<layout name="sblSidebar"
+						initiallyMinimized="%SIDEBAR_MINIMIZED%"
 						resizable="false"
 					>
 						<layoutInfo size="%SIDEBAR_WIDTH%"/>
