Ticket #28474: Created a new css class to style the new behavior.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -1628,12 +1628,14 @@ td.tl-table__cell--selected .cDecoratedCell a.input-image:focus {
 	border-left: 1px solid var(--border-subtle);
 }
 
-.lFixedRight a:hover {
+.lFixedRight a:hover,
+.cExpandableButton a:hover {
 	background: var(--field-hover);
 	text-decoration: none;
 }
 
 .lFixedRight a:focus-within,
+.cExpandableButton a:focus-within,
 .lFixedRight .button_minus:focus-within::after {
 	box-shadow: inset 0px 0px 0px 2px var(--focus),inset 0px 0px 0px 3px var(--focus-inset);
 	border-left: none;
@@ -1641,6 +1643,7 @@ td.tl-table__cell--selected .cDecoratedCell a.input-image:focus {
 }
 
 .lFixedRight a.disabled,
+.cExpandableButton a.disabled,
 .lFixedRight .fChoose.disabled,
 .lFixedRight span.disabled,
 .lFixedRight span span.disabled,
@@ -1649,11 +1652,13 @@ input.is-checkbox[disabled] {
 	color: var(--icon-disabled);
 }
 
-.lFixedRight a.disabled:hover {
-	background: none;
+.lFixedRight a.disabled:hover,
+.cExpandableButton a.disabled:hover {
+	background: var(--field);
 }
 
 .lFixedRight a.disabled:focus,
+.cExpandableButton a.disabled:focus,
 .lFixedRight .button_minus:focus::after {
 	box-shadow: none;
 	outline: none !important;
@@ -1978,16 +1983,18 @@ span.disabled > span.lFlexible > select.tl-select:not( [multiple="multiple"] ) {
 	display: inline-flex;
 }
 
-.cExpandableTextInput .lFixedRight,
-.cBlockTextInput .lFixedRight {
+.cExpandableTextInput .cExpandableButton,
+.cBlockTextInput .cExpandableButton {
 	display: inline-flex;
 	align-items: stretch;
 }
 
-.cExpandableTextInput a.fToggle,
-.cBlockTextInput a.fToggle {
-	flex: 1;
-	height: inherit;
+.cExpandableButton a:not(.lFlexible) {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--button-fg, var(--icon-primary));
+    width: var(--form-line-height);
 }
 
 input[type="checkbox"] {
