--- a/com.top_logic/src/main/java/com/top_logic/layout/form/control/TEXT_INPUT_WITH_BUTTONS_EDIT_TEMPLATE.template.html
+++ b/com.top_logic/src/main/java/com/top_logic/layout/form/control/TEXT_INPUT_WITH_BUTTONS_EDIT_TEMPLATE.template.html
@@ -6,5 +6,5 @@
 			tabindex="{tabindex}" onchange="{onchange}"
 		/>
 	</span>
-	<span class="lFixedRight">{buttons}</span>
+	<span class="{inputButtonCssClass}">{buttons}</span>
 </span>
